--- a/.github/workflows/accessibility-ci.yml
+++ b/.github/workflows/accessibility-ci.yml
@@ -5,14 +5,18 @@ on:
   workflow_dispatch:
 
 jobs:
-  accessibility:
+  a11y-scan:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install dependencies
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install axe-core/CLI server
         run: |
           npm install -g @axe-core/cli serve
 
@@ -23,18 +27,19 @@ jobs:
 
       - name: Run axe scan and save report
         run: |
-          axe http://localhost:3000/before.html \
-            --format json \
-            --save a11y-report.json
+          axe http://localhost:3000/before.html --verbose --save a11y-report.json
 
-      - name: Create separate issues for axe violations
-        uses: insights-oss/axe-linter-action@v3
+      - name: Upload accessibility report artifact
+        uses: actions/upload-artifact@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          name: a11y-scan-report
           path: a11y-report.json
-          include:
-            - wcag2a
-            - wcag2aa
+
+      - name: Create issues from accessibility violations
+        uses: peter-evans/create-issue-from-file@v4
+        with:
+          title: Accessibility Violations Found
+          content-filepath: a11y-report.json
           labels: |
             a11y-scan
             copilot:accessibility
