--- a/.github/workflows/accessibility-ci.yml
+++ b/.github/workflows/accessibility-ci.yml
@@ -1,54 +1,3 @@
-# name: Automated Accessibility Scan
-
-# on:
-#   push:
-#   workflow_dispatch:
-
-# permissions:
-#   contents: write
-#   issues: write
-#   pull-requests: write
-
-# jobs:
-#   a11y-scan:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout repository
-#         uses: actions/checkout@v4
-
-#       - name: Set up Node.js
-#         uses: actions/setup-node@v4
-#         with:
-#           node-version: 20
-
-#       - name: Install axe-core/CLI server
-#         run: |
-#           npm install -g @axe-core/cli serve
-
-#       - name: Serve site locally
-#         run: |
-#           serve . -l 3000 &
-#           sleep 5
-
-#       - name: Run axe scan and save report
-#         run: |
-#           axe http://localhost:3000/before.html --verbose --save a11y-report.json
-
-#       - name: Upload accessibility report artifact
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: a11y-scan-report
-#           path: a11y-report.json
-
-#       - name: Create issues from accessibility violations
-#         uses: peter-evans/create-issue-from-file@v4
-#         with:
-#           title: Accessibility Violations Found
-#           content-filepath: a11y-report.json
-#           labels: |
-#             a11y-scan
-#             copilot:accessibility
-
 name: Automated Accessibility Scan
 
 on:
@@ -68,35 +17,63 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install axe-core CLI and static server
-        run: |
-          npm install -g @axe-core/cli serve
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-      - name: Serve site locally
+      - name: Install dependencies
+        run: |
+          npm install -g @axe-core/cli serve jq
+
+      - name: Serve site
         run: |
           serve . -l 3000 &
           sleep 5
 
-      - name: Run axe scan and generate report
+      - name: Run accessibility scan
         run: |
-          axe http://localhost:3000/before.html --verbose --save a11y-report.json || true
+          axe http://localhost:3000/before.html \
+            --format json \
+            --save a11y-report.json || true
 
-      - name: Format report into markdown
+      - name: Parse violations and create issues
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "## Accessibility Scan Results" > a11y-report.md
-          echo "::warning file=before.html::Detected accessibility violations. Open report attached." >> a11y-report.md
+          jq -c '.violations[]' a11y-report.json | while read -r violation; do
+            rule=$(echo "$violation" | jq -r '.id')
+            desc=$(echo "$violation" | jq -r '.description')
+            help=$(echo "$violation" | jq -r '.helpUrl')
+            nodes=$(echo "$violation" | jq -r '.nodes[0].html' | sed 's/`/`/g')
 
-      - name: Upload scan report as artifact
+cat <<EOF > issue.md
+### Accessibility Issue: $rule
+
+**Description:**
+$desc
+
+**Example HTML:**
+\`\`\`html
+$nodes
+\`\`\`
+
+📌 Auto-generated from axe-core scan  
+🔗 More info: $help
+
+Please apply an accessibility fix and create a Pull Request.
+
+EOF
+
+            gh issue create \
+              --title "Fix: $rule accessibility violation" \
+              --body-file issue.md \
+              --label "a11y-scan" \
+              --label "copilot:accessibility"
+          done
+
+      - name: Upload full JSON report
         uses: actions/upload-artifact@v4
         with:
           name: a11y-scan-report
           path: a11y-report.json
-
-      - name: Create issue with report summary
-        uses: peter-evans/create-issue-from-file@v4
-        with:
-          title: "Accessibility Violations Found"
-          content-filepath: a11y-report.md
-          labels: |
-            a11y-scan
-            copilot:accessibility
