updated yaml- Fix axe scanning syntax

--- a/.github/workflows/accessibility-ci.yml
+++ b/.github/workflows/accessibility-ci.yml
@@ -34,12 +34,15 @@ jobs:
       - name: Run accessibility scan
         run: |
           echo "Running accessibility scan..."
-          if ! axe http://localhost:3000/before.html --format json --save a11y-report.json; then
+          if ! axe http://localhost:3000/before.html \
+            --output a11y-report.json \
+            --output-format json; then
             echo "⚠️ Axe scan failed — creating fallback report"
             echo '{"violations": []}' > a11y-report.json
           fi
 
           echo "Scan completed"
+          jq '.violations | length' a11y-report.json
           ls -l a11y-report.json
 
       - name: Parse report and create individual issues
