updated yaml-v3 (added --reporter json \ in run accessibility scan)

--- a/.github/workflows/accessibility-ci.yml
+++ b/.github/workflows/accessibility-ci.yml
@@ -31,7 +31,9 @@ jobs:
       - name: Run accessibility scan
         run: |
           echo "Running accessibility scan..."
-          axe http://localhost:3000/before.html --save a11y-report.json || echo "Scan issues detected"
+          axe http://localhost:3000/before.html \
+            --reporter json \
+            --save a11y-report.json || echo "Scan issues detected"
           echo "Scan completed"
           jq 'length' a11y-report.json
 
