--- a/.github/workflows/accessibility-ci.yml
+++ b/.github/workflows/accessibility-ci.yml
@@ -32,10 +32,10 @@ jobs:
         run: |
           echo "Running accessibility scan..."
           axe http://localhost:3000/before.html \
-            --format json \
-            --save a11y-report.json || echo "Scan issues detected"
+            --exit \
+            > a11y-report.json || echo "Scan issues detected"
           echo "Scan completed"
-          jq 'length' a11y-report.json
+          jq 'length' a11y-report.json || echo "Parsing failed"
 
       - name: Create GitHub issues for each violation
         env:
