--- a/.github/workflows/accessibility-ci.yml
+++ b/.github/workflows/accessibility-ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install axe-core CLI and dependencies
+      - name: Install axe-core CLI and static server
         run: |
           npm install -g @axe-core/cli serve
           sudo apt-get update
@@ -32,33 +32,34 @@ jobs:
         run: |
           echo "Running accessibility scan..."
           axe http://localhost:3000/before.html \
-            --save a11y-report.json || echo "Scan issues detected"
+            --save a11y-report.json || echo "Scan completed with warnings"
           echo "Scan completed"
-          jq '.violations | length' a11y-report.json
+          jq 'length' a11y-report.json
 
       - name: Create GitHub issues for each violation
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          count=$(jq '.violations | length' a11y-report.json)
+          count=$(jq 'length' a11y-report.json)
           echo "Found $count accessibility violations"
-
           if [ "$count" -eq 0 ]; then
             echo "No accessibility issues found."
             exit 0
           fi
 
-          jq -c '.violations[]' a11y-report.json | while read -r violation; do
-            rule=$(echo "$violation" | jq -r '.id')
-            desc=$(echo "$violation" | jq -r '.description')
-            help=$(echo "$violation" | jq -r '.helpUrl // "No documentation"')
+          jq -c '.[]' a11y-report.json | while read -r violation; do
+            rule=$(echo "$violation" | jq -r '.id // "Unknown rule"')
+            desc=$(echo "$violation" | jq -r '.description // "No description available"')
+            help=$(echo "$violation" | jq -r '.helpUrl // "No help URL"')
             snippet=$(echo "$violation" | jq -r '.nodes[0].html // "No snippet available"' | sed 's/`/"/g')
 
-            body="### Accessibility Issue: ${rule}\n\n"
+            body="### Accessibility Issue Detected 🚨\n\n"
+            body+="**Rule:** \`${rule}\`\n\n"
             body+="**Description:**\n${desc}\n\n"
-            body+="**Example element:**\n\`\`\`html\n${snippet}\n\`\`\`\n\n"
-            body+="🔗 WCAG Rule: ${help}\n"
-            body+="🤖 Auto-generated — Copilot can help fix this!\n"
+            body+="**Example Problematic Element:**\n\`\`\`html\n${snippet}\n\`\`\`\n\n"
+            body+="🔗 **WCAG Guidance:** ${help}\n\n"
+            body+="🤖 Auto-generated — Ask Copilot to fix using:\n"
+            body+="\`@github-copilot please fix this\`\n"
 
             printf "%b\n" "$body" > issue.md
 
@@ -67,5 +68,5 @@ jobs:
               --body-file issue.md \
               --label "a11y-scan" \
               --label "copilot:accessibility" \
-              || echo "Failed to create issue for ${rule}"
+              || echo "❌ Failed to create issue for ${rule}"
           done
