--- a/.github/workflows/accessibility-ci.yml
+++ b/.github/workflows/accessibility-ci.yml
@@ -1,7 +1,6 @@
 name: Automated Accessibility Scan
 
 on:
-  push:
   workflow_dispatch:
 
 permissions:
@@ -60,12 +59,11 @@ jobs:
             snippet=$(echo "$violation" | jq -r '.nodes[0].html // "No snippet available"' | sed 's/`/"/g')
 
             title="Fix: ${rule} violation"
-            body="### Accessibility Issue Detected 🚨\n\n"
+            body="### Accessibility Issue Detected \n\n"
             body+="**Rule:** \`${rule}\`\n\n"
             body+="**Description:**\n${desc}\n\n"
             body+="**Example Element:**\n\`\`\`html\n${snippet}\n\`\`\`\n\n"
-            body+="🔗 WCAG Rule: ${help}\n"
-            body+="🤖 Auto-generated — Ask Copilot to fix using:\n\`@github-copilot please fix this\`\n"
+            body+="WCAG Rule: ${help}\n"
 
             printf "%b\n" "$body" > issue.md
 
