--- a/.github/workflows/accessibility-ci.yml
+++ b/.github/workflows/accessibility-ci.yml
@@ -18,9 +18,10 @@ jobs:
 
       - name: Install axe-core CLI and static server
         run: |
-          npm install -g @axe-core/cli serve
           sudo apt-get update
           sudo apt-get install -y jq
+          npm install -g @axe-core/cli serve browser-driver-manager
+          npx browser-driver-manager install chrome
 
       - name: Serve site locally
         run: |
@@ -30,10 +31,9 @@ jobs:
       - name: Run accessibility scan
         run: |
           echo "Running accessibility scan..."
-          axe http://localhost:3000/before.html \
+          xvfb-run -a axe http://localhost:3000/before.html \
             --save a11y-report.json || echo "Scan completed with warnings"
           echo "Scan completed"
-          jq 'length' a11y-report.json
 
       - name: Upload accessibility report
         uses: actions/upload-artifact@v4
